eveng/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eveng-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        volumeMounts:
        - name: eveng-nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: eveng-nginx-config
        configMap:
          name: eveng-nginx-config
