eveng/eveng-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: eveng
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.17.2
    ports:
      - port: 443
