eveng/eveng-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eveng-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`eve-ng.homelab.byrnbaker.me`)
      kind: Rule
      services:
        - name: eveng-nginx
          port: 80
  tls:
    secretName: homelab-byrnbaker-me-tls
